--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ant-design-vue": "^1.6.4",
     "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
