--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.27.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^3.0.6",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
